# project-weather-station

./: .gitignore  README.md  postgres_setup.md
docs/: database_schema.md
src/: climate_readings.py  networking.py  temperature.py  temperature_readings.py
src/weather_station/: bmp085.py  climate_readings.py  database.py  micropg_lite.py  networking.py  station_details  temperature.py
src/web_server/: Cargo.toml
src/web_server/src/: error.rs  main.rs
src/web_server/src/database/: mod.rs
src/web_server/src/pages/: conditions.html  index.html  index.js  package-lock.json  package.json  tailwind.config.js
src/web_server/src/pages/styles/: style.css
src/web_server/src/server/: mod.rs
src/web_server/src/web/: routes_cities.rs
