[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features=["full"] }
axum = "0.8.1"
axum-macros = "0.5.0"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "1.0.197", features=["derive"] }
serde_json = "1.0.113"
tower-http = { version="0.6.2", features=["fs"] }

# Database
sqlx = { version = "0.8.3", features=["postgres", "runtime-tokio-rustls"]}
